# atelier

./: .gitignore  CONTROL_PLANE.md  PRINCIPLES.md  README.md  pyproject.toml
core/: cli.py  sculpt.py  sdflib.py  stage.py  styles.py
core/blender/: bsculpt.py  bstage.py  runner.py
projects/byrne/: byrne_stocks.json  dance_mpfb.py  dance_study.py  i_dance_like_this.py  minors.py  models.py  mpfb_body.py  mpfb_probe.py  once_in_a_lifetime.py  psycho_killer.py  road_to_nowhere.py
projects/fable/: blender_scene.py  creatures.py  scene.py  staged.py
projects/studies/: a_fox.py  b_head.py  c_cameo.py  d_painterly.py
projects/ulysses/: AUDIT_1904.md  DUBLIN_SET.md  JOURNAL.md  census.py  dublin_aerial.py  dublin_blender.py  dublin_set.py  eccles_probe.py  export_glb.py  forger_set.py  linati_stocks.json  quays_view.py  rawls_probe.py  roundtrip_glb.py  sackville_probe.py  telemachus_set.py  wandering_set.py  whodunit.py
report/: build_report.py
