[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier"
version = "0.1.0"
description = "Code-native illustration pipeline: sculptor → stager → painter, with a formal direction plane (knobs, bindings, stocks) over twelve style engines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mykola Bilokonsky" }, { name = "Claude Fable (Anthropic)" }]
dependencies = ["numpy>=1.24", "pillow>=10.0"]

[project.urls]
Repository = "https://github.com/mbilokonsky/atelier"

[project.scripts]
atelier = "atelier.cli:main"

[tool.setuptools]
packages = ["atelier", "atelier.blender"]

[tool.setuptools.package-dir]
atelier = "core"
"atelier.blender" = "core/blender"
